# POWER_CONTROL_MQTT_PUBLISHER

./: CMakeLists.txt  main.cpp
host/: sm_host.c  sm_host.h
include/: config.h
lib/: CMakeLists.txt  Makefile  mosquitto_internal.h
lib/cpp/: CMakeLists.txt
src/: CMakeLists.txt  Makefile
utils/: sm_err.h  sm_logger.h  sm_memory.h  sm_timer.h
utils/linux/: linux_serial.c  linux_serial.h  tcp_server.c
